tests/rosetta/out/C/active-object.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:37Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:37Z
#include <stdio.h>
#include <stdlib.h>

static double PI = 3.141592653589793;
static double dt = 0.01;
static double s = 0.0;
static double t1 = 0.0;
static int i = 1;
static int i2 = 1;

double sinApprox(double x) {
  double term = x;
  double sum = x;
  int n = 1;
  while (n <= 12) {
    double denom = (double)(((2 * n) * (2 * n + 1)));
    term = (-term) * x * x / denom;
    sum = sum + term;
    n = n + 1;
  }
  return sum;
}

int _mochi_main() {
  double k1 = sinApprox(0.0);
  while (i <= 200) {
    double t2 = ((double)(i)) * dt;
    double k2 = sinApprox(t2 * PI);
    s = s + (k1 + k2) * 0.5 * (t2 - t1);
    t1 = t2;
    k1 = k2;
    i = i + 1;
  }
  while (i2 <= 50) {
    double t2 = 2.0 + ((double)(i2)) * dt;
    double k2 = 0.0;
    s = s + (k1 + k2) * 0.5 * (t2 - t1);
    t1 = t2;
    k1 = k2;
    i2 = i2 + 1;
  }
  printf("%.17g\n", s.0);
  return 0;
}
int main() { return _mochi_main(); }
